--- a/cached_network_image_web/pubspec.yaml
+++ b/cached_network_image_web/pubspec.yaml
@@ -11,7 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_cache_manager: ^3.0.0
-  cached_network_image_platform_interface: ^2.0.0
+  cached_network_image_platform_interface:
+    git:
+      url: https://github.com/BensonGicheru/flutter_cached_network_image.git
+      path: cached_network_image_platform_interface
 
 dev_dependencies:
   flutter_test:
