--- a/cached_network_image/pubspec.yaml
+++ b/cached_network_image/pubspec.yaml
@@ -23,5 +23,5 @@ dev_dependencies:
   file: ^6.1.0
 
 environment:
-  flutter: ">=3.3.0"
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ^3.0.0
+  flutter: '>=3.10.0'
