--- a/cached_network_image_web/pubspec.yaml
+++ b/cached_network_image_web/pubspec.yaml
@@ -4,13 +4,14 @@ version: 1.0.2
 homepage: https://github.com/Baseflow/flutter_cached_network_image
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
-  flutter: ">=3.3.0"
+  sdk: ^3.0.0
+  flutter: '>=3.10.0'
+
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_cache_manager: ^3.0.0
+  flutter_cache_manager: ^3.3.1
   cached_network_image_platform_interface:
     git:
       url: https://github.com/BensonGicheru/flutter_cached_network_image.git
